// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toEqualLeft() fails when object equals the left 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqualLeft([22m[32mexpectedLeft[39m[2m)[22m

Expected Either not to equal left:
  [32m\\"same\\"[39m

But it's the same."
`;

exports[`.not.toEqualLeft() fails when object equals the left using an asymmetric matcher 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqualLeft([22m[32mexpectedLeft[39m[2m)[22m

Expected Either not to equal left:
  [32mObjectContaining {\\"test\\": \\"ok\\"}[39m

But it's the same."
`;

exports[`.toEqualLeft() fails when object does not equal the left using an asymmetric matcher 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqualLeft([22m[32mexpectedLeft[39m[2m)[22m

Difference from Left:

[32m- Expected[39m
[31m+ Received[39m

[32m- ObjectContaining {[39m
[32m-   \\"test\\": \\"nok\\",[39m
[31m+ Object {[39m
[31m+   \\"test\\": \\"ok\\",[39m
[2m  }[22m"
`;

exports[`.toEqualLeft() fails when object is a right 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqualLeft([22m[32mexpectedLeft[39m[2m)[22m

Expected Either to equal left:
  [32m\\"same\\"[39m

Received right."
`;

exports[`.toEqualLeft() fails when object is not equal to the left 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqualLeft([22m[32mexpectedLeft[39m[2m)[22m

Expected Either to equal left:
  [32m\\"different\\"[39m

Received left:
  [31m{\\"test\\": \\"ok\\"}[39m"
`;
